--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "blueimp-file-upload": "^10.32.0",
+        "jquery": "^3.6.0"
     }
 }
